# jupyterlab-code-loader

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml
.claude/commands/: populate-repo.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: build.yml  release.yml
jupyter-config/server-config/: jupyterlab-code-loader.json
jupyterlab-code-loader/: __init__.py  config.py  git_sync.py  handlers.py  locale_resolver.py
jupyterlab-code-loader/i18n/: en.json  fr.json
schema/: plugin.json
skills/cloader-content/: SKILL.md
skills/cloader-content/references/: repo-structure.md
skills/cloader-content/scripts/: build_registry.py  validate.py
src/: handler.ts  icons.ts  index.ts  kernel_map.ts  model.ts  search.ts  widget.ts
src/__tests__/: jupyterlab_code_loader.spec.ts
src/components/: CodeItemRow.ts  DomainAccordion.ts  KernelIndicator.ts  SearchBar.ts  SetupForm.ts  SnippetRow.ts  StatusBar.ts  TabBar.ts
style/: base.css
ui-tests/: package.json  playwright.config.js
ui-tests/tests/: jupyterlab_code_loader.spec.ts
